[update]背景画像のレスポンシブ対応。動画は再生できていない(サーバーたてないと無理？)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<title>十念寺</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 <body>
 	<header class="header">
@@ -32,10 +31,22 @@
 		</div><!-- /.header-inner -->
 	</header>
 	<main>
-
+		<div class="main-visual">
+			<div class="main-visual-inner">
+				<!-- ※参考サイト：https://coco-factory.jp/ugokuweb/move01/6-3-2/ -->
+				<div class="loading"></div><!-- /.loading -->
+				<div class="youtube-area">
+					<h1 class="main-visual-inner-title"><img class="main-visual-inner-title-img" src="assets/images/junenji_logo_top.png"></h1>
+					<div class="youtube"></div><!-- /.youtube -->
+					<div class="youtube-mask"></div><!-- /.youtube-mask -->
+				</div><!-- /.youtube-area -->
+			</div><!-- /.main-visual-inner -->
+		</div><!-- /.main-visual -->
 	</main>
 	<footer>
 		
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
