--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 	<main>
 		<div class="main-visual">
 			<div class="main-visual-inner">
-				<!-- ※参考サイト：https://coco-factory.jp/ugokuweb/move01/6-3-2/ -->
+				<!-- ※参考サイト：https://coco-factory.jp/ugokuweb/move01/6-3-2/ 
+								https://bravo-web.com/news/making-2				-->
 				<div class="loading"></div><!-- /.loading -->
 				<div class="youtube-area">
 					<h1 class="main-visual-inner-title"><img class="main-visual-inner-title-img" src="assets/images/junenji_logo_top.png"></h1>
@@ -42,6 +43,20 @@
 				</div><!-- /.youtube-area -->
 			</div><!-- /.main-visual-inner -->
 		</div><!-- /.main-visual -->
+		<div class="main-bg">
+			<div class="main-contents">
+				<div class="main-about">
+					<img class="main-about-left" src="assets/images/about-left.png">
+					<div class="main-about-contents">
+						<h2 class="main-about-contents-title">浄土宗西山禅林寺派<br><span class="main-about-title-contents-small">具足山</span> 十念寺</h2><!-- /.main-about-contents-title -->
+						<p class="main-about-contents-text">刈谷市指定文化財である御本尊や<br>各施設についてご紹介</p><!-- /.main-about-contents-text -->
+						<button class="main-about-contents-button button-normal" href="#">十念寺について</button><!-- /.main-about-contents-button -->
+					</div><!-- /.main-about-contents -->
+					<img class="main-about-right" src="assets/images/about-right.png">
+				</div><!-- /.main-about -->
+			</div><!-- /.main-contents -->
+		</div><!-- /.main-bg -->
+
 	</main>
 	<footer>
 		
