[add]メインメニュー部分作成。アニメーション未実装

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header class="header">
 		<div class="header-inner">
 			<div class="header-inner-left">
-				<img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo">
+				<a href="#" class="header-inner-left-logo-link"><img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo-img"></a><!-- /.header-inner-left-logo-link -->
 			</div><!-- /.header-inner-left -->
 			<div class="header-inner-right">
 				<div class="header-inner-right-menu">
@@ -43,20 +43,65 @@
 				</div><!-- /.youtube-area -->
 			</div><!-- /.main-visual-inner -->
 		</div><!-- /.main-visual -->
-		<div class="main-bg">
+		<div class="main-about-bg">
 			<div class="main-contents">
 				<div class="main-about">
 					<img class="main-about-left" src="assets/images/about-left.png">
 					<div class="main-about-contents">
 						<h2 class="main-about-contents-title">浄土宗西山禅林寺派<br><span class="main-about-title-contents-small">具足山</span> 十念寺</h2><!-- /.main-about-contents-title -->
 						<p class="main-about-contents-text">刈谷市指定文化財である御本尊や<br>各施設についてご紹介</p><!-- /.main-about-contents-text -->
-						<button class="main-about-contents-button button-normal" href="#">十念寺について</button><!-- /.main-about-contents-button -->
+						<button class="main-about-contents-button button-normal2" href="#">十念寺について</button><!-- /.main-about-contents-button -->
 					</div><!-- /.main-about-contents -->
 					<img class="main-about-right" src="assets/images/about-right.png">
 				</div><!-- /.main-about -->
 			</div><!-- /.main-contents -->
-		</div><!-- /.main-bg -->
-
+		</div><!-- /.main-about-bg -->
+		<div class="main-menu-list">
+			<div class="main-menu-item-bg">
+				<div class="main-menu-item">
+					<div class="main-menu-item-card main-menu-item-card-right">
+						<div class="main-menu-item-card-inner">
+							<p class="main-menu-item-card-title">ご案内</p><!-- /.main-menu-item-card-title -->
+							<p class="main-menu-item-card-text">刈谷藩主 土井家、天誅組 総裁 松本奎堂、俳人 中島秋挙など。十念寺にまつわる見どころをご案内。</p><!-- /.main-menu-item-card-text -->
+							<button class="main-menu-item-card-button button-normal button-normal-radius">詳しく見る</button><!-- /.main-menu-item-card-button -->
+						</div><!-- /.main-menu-item-card-inner -->
+					</div><!-- /.main-menu-item-card -->
+				</div><!-- /.main-menu-item -->	
+			</div><!-- /.main-menu-item-bg -->
+			<div class="main-menu-item-bg">
+				<div class="main-menu-item">
+					<div class="main-menu-item-card main-menu-card-left">
+						<div class="main-menu-item-card-inner">
+							<p class="main-menu-item-card-title">法要</p><!-- /.main-menu-item-card-title -->
+							<p class="main-menu-item-card-text">法要・法事のご要望を承っております。まずはご相談ください</p><!-- /.main-menu-item-card-text -->
+							<button class="main-menu-item-card-button button-normal button-normal-radius">詳しく見る</button><!-- /.main-menu-item-card-button -->
+						</div><!-- /.main-menu-item-card-inner -->
+					</div><!-- /.main-menu-item-card -->
+				</div><!-- /.main-menu-item -->	
+			</div><!-- /.main-menu-item-bg -->
+			<div class="main-menu-item-bg">
+				<div class="main-menu-item">
+					<div class="main-menu-item-card main-menu-item-card-right">
+						<div class="main-menu-item-card-inner">
+							<p class="main-menu-item-card-title">年間行事</p><!-- /.main-menu-item-card-title -->
+							<p class="main-menu-item-card-text">十念寺で行われる年間行事です。庚申大祭のご紹介はこちら</p><!-- /.main-menu-item-card-text -->
+							<button class="main-menu-item-card-button button-normal button-normal-radius">詳しく見る</button><!-- /.main-menu-item-card-button -->
+						</div><!-- /.main-menu-item-card-inner -->
+					</div><!-- /.main-menu-item-card -->
+				</div><!-- /.main-menu-item -->	
+			</div><!-- /.main-menu-item-bg -->
+			<div class="main-menu-item-bg">
+				<div class="main-menu-item">
+					<div class="main-menu-item-card main-menu-card-left">
+						<div class="main-menu-item-card-inner">
+							<p class="main-menu-item-card-title">お墓</p><!-- /.main-menu-item-card-title -->
+							<p class="main-menu-item-card-text">お墓や永代供養墓地でのご相談を承っております。</p><!-- /.main-menu-item-card-text -->
+							<button class="main-menu-item-card-button button-normal button-normal-radius">詳しく見る</button><!-- /.main-menu-item-card-button -->
+						</div><!-- /.main-menu-item-card-inner -->
+					</div><!-- /.main-menu-item-card -->
+				</div><!-- /.main-menu-item -->	
+			</div><!-- /.main-menu-item-bg -->
+		</div><!-- /.main-menu-list -->
 	</main>
 	<footer>
 		
