[add]交通の案内部分作成

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div><!-- /.youtube-area -->
 			</div><!-- /.main-visual-inner -->
 		</div><!-- /.main-visual -->
-		<div class="main-about-bg">
+		<div class="main-bg">
 			<div class="main-contents">
 				<div class="main-about">
 					<img class="main-about-left" src="assets/images/about-left.png">
@@ -55,7 +55,7 @@
 					<img class="main-about-right" src="assets/images/about-right.png">
 				</div><!-- /.main-about -->
 			</div><!-- /.main-contents -->
-		</div><!-- /.main-about-bg -->
+		</div><!-- /.main-bg -->
 		<div class="main-menu-list">
 			<div class="main-menu-item-bg">
 				<div class="main-menu-item">
@@ -102,6 +102,18 @@
 				</div><!-- /.main-menu-item -->	
 			</div><!-- /.main-menu-item-bg -->
 		</div><!-- /.main-menu-list -->
+		<div class="main-bg">
+			<div class="main-contents">
+				<div class="main-traffic">
+					<h3 class="main-traffic-title">交通のご案内</h3><!-- /.main-traffic-title -->
+					<iframe class="main-traffic-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1634.4261657822062!2d136.99122306021076!3d34.985363388056115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f6.5!3m3!1m2!1s0x60049cc522e93471%3A0x63cd901e503ac899!2sJunenji!5e0!3m2!1sen!2sjp!4v1674799311471!5m2!1sen!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<p class="main-traffic-address main-traffic-text">〒448-0844　愛知県刈谷市広小路4-219</p><!-- /.main-traffic-address -->
+					<p class="main-traffic-tel main-traffic-text">TEL : 0566-21-0854</p><!-- /.main-traffic-tel -->
+					<button class="main-traffic-more button-normal3">詳しくはこちら</button><!-- /.main-traffic-more -->
+				</div><!-- /.main-traffic -->
+			</div><!-- /.main-contents -->	
+		</div><!-- /.main-bg -->
+
 	</main>
 	<footer>
 		
