[add]スライドショー実装

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>十念寺</title>
+	<link rel="stylesheet" href="assets/libs/slick.css">
+	<link rel="stylesheet" href="assets/libs/slick-theme.css">
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -113,12 +115,21 @@
 				</div><!-- /.main-traffic -->
 			</div><!-- /.main-contents -->	
 		</div><!-- /.main-bg -->
-
+		<div class="main-slider">
+			<ul class="main-slider-list">
+				<li class="main-slider-item1"></li><!-- /.main-slider-item -->
+				<li class="main-slider-item2"></li><!-- /.main-slider-item -->
+				<li class="main-slider-item3"></li><!-- /.main-slider-item -->
+				<li class="main-slider-item4"></li><!-- /.main-slider-item -->
+				<li class="main-slider-item5"></li><!-- /.main-slider-item -->
+			</ul><!-- /.main-slider-list -->
+		</div><!-- /.main-slider -->
 	</main>
 	<footer>
 		
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/libs/slick.min.js"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
