--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>十念寺</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/libs/slick.css">
 	<link rel="stylesheet" href="assets/libs/slick-theme.css">
 	<link rel="stylesheet" href="assets/css/reset.css">
@@ -32,7 +35,7 @@
 			</div><!-- /.header-inner-right -->
 		</div><!-- /.header-inner -->
 	</header>
-	<main>
+	<main class="main">
 		<div class="main-visual">
 			<div class="main-visual-inner">
 				<!-- ※参考サイト：https://coco-factory.jp/ugokuweb/move01/6-3-2/ 
@@ -125,8 +128,35 @@
 			</ul><!-- /.main-slider-list -->
 		</div><!-- /.main-slider -->
 	</main>
-	<footer>
-		
+	<footer class="footer">
+		<div class="footer-inner">
+			<div class="footer-inner-logo"><img class="footer-inner-logo-image" src="assets/images/footer-logo.png"></div><!-- /.footer-inner-logo -->
+			<address class="footer-inner-address">
+				<p class="footer-inner-address-text">〒448-0844　愛知県刈谷市広小路4-219</p><!-- /.footer-inner-address-text -->
+				<p class="footer-inner-address-tel-text">TEL : 0566-21-0854</p><!-- /.footer-inner-address-tel-text -->
+			</address><!-- /.footer-inner-address -->
+			<div class="footer-inner-menu">
+				<ol class="footer-inner-menu-list">
+					<li class="footer-inner-menu-item"><a href="#">トップページ</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">法要</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
+				</ol><!-- /.footer-inner-menu-list -->
+			</div><!-- /.footer-inner-menu -->
+			<div class="footer-inner-sns">
+				<div class="footer-inner-sns-list">
+					<div class="footer-inner-sns-line"><a href="#"><img src="assets/images/line-icon.png"></a></div><!-- /.footer-inner-sns-line -->
+					<div class="footer-inner-sns-youtube"><a href="https://www.youtube.com/@user-yi7vt4pb1c" target="_black"><img src="assets/images/youtube-icon.png"></a></div><!-- /.footer-inner-sns-youtube -->	
+				</div><!-- /.footer-inner-sns-list -->
+			</div><!-- /.footer-inner-sns -->
+			<div class="footer-inner-copyright">
+				<small class="footer-inner-copyright-text">&copy; 2023 Junenji Temple</small><!-- /.footer-inner-copyright-text -->
+			</div><!-- /.footer-inner-copyright -->
+		</div><!-- /.footer-inner -->
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/libs/slick.min.js"></script>
