[update]PC版トップページ、動作再生実装

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 	</header>
 	<main class="main">
 		<div class="main-visual">
-			<div class="main-visual-inner">
-				<!-- ※参考サイト：https://coco-factory.jp/ugokuweb/move01/6-3-2/ 
-								https://bravo-web.com/news/making-2				-->
-				<div class="loading"></div><!-- /.loading -->
-				<div class="youtube-area">
-					<h1 class="main-visual-inner-title"><img class="main-visual-inner-title-img" src="assets/images/junenji_logo_top.png"></h1>
-					<div class="youtube"></div><!-- /.youtube -->
-					<div class="youtube-mask"></div><!-- /.youtube-mask -->
-				</div><!-- /.youtube-area -->
+			<div class="main-visual-inner" data-property="{
+				videoURL: 'https://www.youtube.com/watch?v=lETYpWTxtps',
+				mute: true,
+				showControls: false,
+				containment: 'self',
+				ratio: '16/9',
+				showYTLogo: false,
+			}">
+				<h1 class="main-visual-inner-title"><img class="main-visual-inner-title-img" src="assets/images/junenji_logo_top.png"></h1>
 			</div><!-- /.main-visual-inner -->
 		</div><!-- /.main-visual -->
 		<div class="main-bg">
@@ -159,6 +159,7 @@
 		</div><!-- /.footer-inner -->
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/libs/jquery.mb.YTPlayer.min.js"></script>
 	<script type="text/javascript" src="assets/libs/slick.min.js"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
