--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="header-inner-left">
 				<a href="#" class="header-inner-left-logo-link"><img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo-img"></a><!-- /.header-inner-left-logo-link -->
 			</div><!-- /.header-inner-left -->
-			<div class="header-inner-right">
+			<div class="header-inner-right tablet-hidden">
 				<div class="header-inner-right-menu">
 					<nav class="header-inner-right-menu-normal">
 						<ol class="header-inner-right-menu-normal-list">
@@ -33,6 +33,40 @@
 					<button class="header-inner-right-menu-contact">お問い合わせ</button>
 				</div><!-- /.header-inner-right-menu -->
 			</div><!-- /.header-inner-right -->
+			<div class="header-inner-right-mb">
+				<a href="tel:0000000000" class="header-inner-right-mb-button button-header-tel"><img src="assets/images/tel.png">お電話</a><!-- /.header-inner-right-mb-tel -->
+				<a href="#" class="header-inner-right-mb-button button-header-access"><img src="assets/images/mappin.png">アクセス</a><!-- /.header-inner-right-mb-button -->
+				<!-- ハンバーガーメニュー参考サイト：https://hakenblog.com/hamburger-menu/、https://codepen.io/sakuragraphica/pen/PozLPBg、https://syncer.jp/jquery-modal-window -->
+				<a class="header-inner-right-mb-button button-header-hamburger">
+					<div class="header-inner-right-mb-hamburger-icon">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div><!-- /.header-inner-right-mb-hamburger-icon -->
+					メニュー
+				</a><!-- /.header-inner-right-mb-menu -->
+			</div><!-- /.header-inner-right-mb -->
+			<nav class="header-inner-right-mb-menu-list-outer">
+				<a class="header-inner-right-mb-menu-list-close-button">
+					<div class="header-inner-right-mb-menu-list-close-button-icon">
+						<span></span>
+						<span></span>
+						<span></span>	
+					</div><!-- /.header-inner-right-mb-menu-list-close-button-icon -->
+					閉じる
+				</a>
+				<img class="header-inner-right-mb-menu-list-logo" src="assets/images/junenji_logo_white.png">
+				<ol class="header-inner-right-mb-menu-list">
+					<li class="header-inner-right-mb-menu-item"><a href="#">トップページ</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺について</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺のご案内</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">法要</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">年間行事</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">永代供養墓地</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">交通のご案内</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="#">お問い合わせ</a></li>
+				</ol><!-- /.header-inner-right-mb-menu-list -->
+			</nav><!-- /.header-inner-right-mb-menu-list-outer -->
 		</div><!-- /.header-inner -->
 	</header>
 	<main class="main">
@@ -44,6 +78,7 @@
 				containment: 'self',
 				ratio: '16/9',
 				showYTLogo: false,
+				useOnMobile: false,
 			}">
 				<h1 class="main-visual-inner-title"><img class="main-visual-inner-title-img" src="assets/images/junenji_logo_top.png"></h1>
 			</div><!-- /.main-visual-inner -->
@@ -59,6 +94,17 @@
 					</div><!-- /.main-about-contents -->
 					<img class="main-about-right" src="assets/images/about-right.png">
 				</div><!-- /.main-about -->
+				<div class="main-about-tablet">
+					<div class="main-about-tablet-img">
+						<img class="main-about-left" src="assets/images/about-left.png">
+						<img class="main-about-right" src="assets/images/about-right.png">
+					</div><!-- /.main-about-img -->
+					<div class="main-about-contents">
+						<h2 class="main-about-contents-title">浄土宗西山禅林寺派<br><span class="main-about-contents-title-small">具足山</span> 十念寺</h2><!-- /.main-about-contents-title -->
+						<p class="main-about-contents-text">刈谷市指定文化財である御本尊や<br>各施設についてご紹介</p><!-- /.main-about-contents-text -->
+						<button class="main-about-contents-button button-normal2" href="#">十念寺について</button><!-- /.main-about-contents-button -->
+					</div><!-- /.main-about-contents -->
+				</div><!-- /.main-about-tablet -->
 			</div><!-- /.main-contents -->
 		</div><!-- /.main-bg -->
 		<div class="main-menu-list">
