[add]タブレットのメイン部分完成

--- a/index.html
+++ b/index.html
@@ -153,6 +153,30 @@
 				</div><!-- /.main-menu-item -->	
 			</div><!-- /.main-menu-item-bg -->
 		</div><!-- /.main-menu-list -->
+		<div class="main-menu-list-tablet-bg">
+			<div class="main-menu-list-tablet">
+				<div class="main-menu-item-tablet">
+					<img class="main-menu-item-tablet-img" src="assets/images/junenji_front_tablet.png">
+					<p class="main-menu-item-tablet-text">刈谷藩主 土井家、天誅組 総裁 松本奎堂、俳人 中島秋挙など。十念寺にまつわる見どころをご案内。</p>
+					<button class="main-menu-item-tablet-button" href="#">十念寺のご案内</button>
+				</div><!-- /.main-menu-item-tablet -->
+				<div class="main-menu-item-tablet">
+					<img class="main-menu-item-tablet-img" src="assets/images/junenji_chant_tablet.png">
+					<p class="main-menu-item-tablet-text">法要・法事のご要望を承っております。まずはご相談ください</p>
+					<button class="main-menu-item-tablet-button" href="#">法要</button>
+				</div><!-- /.main-menu-item-tablet -->
+				<div class="main-menu-item-tablet">
+					<img class="main-menu-item-tablet-img" src="assets/images/junenji_event_tablet.png">
+					<p class="main-menu-item-tablet-text">十念寺で行われる年間行事です。庚申大祭のご紹介はこちら</p>
+					<button class="main-menu-item-tablet-button" href="#">年間行事</button>
+				</div><!-- /.main-menu-item-tablet -->
+				<div class="main-menu-item-tablet">
+					<img class="main-menu-item-tablet-img" src="assets/images/junenji_grave_tablet.png">
+					<p class="main-menu-item-tablet-text">お墓や永代供養墓地でのご相談を承っております。</p>
+					<button class="main-menu-item-tablet-button" href="#">お墓</button>
+				</div><!-- /.main-menu-item-tablet -->
+			</div><!-- /.main-menu-list-tablet -->
+		</div><!-- /.main-menu-list-tablet-bg -->
 		<div class="main-bg">
 			<div class="main-contents">
 				<div class="main-traffic">
