[add]タブレット表示のレスポンシブ対応完了(トップページ)

--- a/index.html
+++ b/index.html
@@ -227,6 +227,32 @@
 				<small class="footer-inner-copyright-text">&copy; 2023 Junenji Temple</small><!-- /.footer-inner-copyright-text -->
 			</div><!-- /.footer-inner-copyright -->
 		</div><!-- /.footer-inner -->
+		<div class="footer-inner-tablet">
+			<ol class="footer-inner-menu-list">
+				<li class="footer-inner-menu-item"><a href="#">トップページ</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">法要</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
+			</ol><!-- /.footer-inner-menu-list -->
+			<div class="footer-inner-logo"><img class="footer-inner-logo-image" src="assets/images/footer-logo.png"></div><!-- /.footer-inner-logo -->
+			<address class="footer-inner-address">
+				<p class="footer-inner-address-text">〒448-0844　愛知県刈谷市広小路4-219</p><!-- /.footer-inner-address-text -->
+				<p class="footer-inner-address-tel-text">TEL : 0566-21-0854</p><!-- /.footer-inner-address-tel-text -->
+			</address><!-- /.footer-inner-address -->
+			<div class="footer-inner-sns">
+				<div class="footer-inner-sns-list">
+					<div class="footer-inner-sns-line"><a href="#"><img src="assets/images/line-icon.png"></a></div><!-- /.footer-inner-sns-line -->
+					<div class="footer-inner-sns-youtube"><a href="https://www.youtube.com/@user-yi7vt4pb1c" target="_black"><img src="assets/images/youtube-icon.png"></a></div><!-- /.footer-inner-sns-youtube -->	
+				</div><!-- /.footer-inner-sns-list -->
+			</div><!-- /.footer-inner-sns -->
+			<div class="footer-inner-copyright">
+				<small class="footer-inner-copyright-text">&copy; 2023 Junenji Temple</small><!-- /.footer-inner-copyright-text -->
+			</div><!-- /.footer-inner-copyright -->
+		</div><!-- /.footer-inner-tablet -->
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/libs/jquery.mb.YTPlayer.min.js"></script>
