[update]法要ページレスポンシブ完了(タブレット)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<header class="header">
 		<div class="header-inner">
 			<div class="header-inner-left">
-				<a href="#" class="header-inner-left-logo-link"><img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo-img"></a><!-- /.header-inner-left-logo-link -->
+				<a class="header-inner-left-logo-link"><img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo-img"></a><!-- /.header-inner-left-logo-link -->
 			</div><!-- /.header-inner-left -->
 			<div class="header-inner-right tablet-hidden">
 				<div class="header-inner-right-menu">
@@ -25,7 +25,7 @@
 						<ol class="header-inner-right-menu-normal-list">
 							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺について</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺のご案内</a></li>
-							<li class="header-inner-right-menu-normal-item"><a href="#">法要</a></li>
+							<li class="header-inner-right-menu-normal-item"><a href="memorial-service.html">法要</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">永代供養墓地</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">交通のご案内</a></li>
 						</ol><!-- /.header-inner-right-menu-list -->
@@ -60,7 +60,7 @@
 					<li class="header-inner-right-mb-menu-item"><a href="#">トップページ</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺について</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺のご案内</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">法要</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="memorial-service.html">法要</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">年間行事</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">永代供養墓地</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">交通のご案内</a></li>
@@ -125,7 +125,7 @@
 						<div class="main-menu-item-card-inner">
 							<p class="main-menu-item-card-title">法要</p><!-- /.main-menu-item-card-title -->
 							<p class="main-menu-item-card-text">法要・法事のご要望を承っております。まずはご相談ください</p><!-- /.main-menu-item-card-text -->
-							<button class="main-menu-item-card-button button-normal button-normal-radius">詳しく見る</button><!-- /.main-menu-item-card-button -->
+							<button class="main-menu-item-card-button button-normal button-normal-radius" onclick="location.href='memorial-service.html'">詳しく見る</button><!-- /.main-menu-item-card-button -->
 						</div><!-- /.main-menu-item-card-inner -->
 					</div><!-- /.main-menu-item-card -->
 				</div><!-- /.main-menu-item -->	
@@ -163,7 +163,7 @@
 				<div class="main-menu-item-tablet">
 					<img class="main-menu-item-tablet-img" src="assets/images/junenji_chant_tablet.png">
 					<p class="main-menu-item-tablet-text">法要・法事のご要望を承っております。まずはご相談ください</p>
-					<button class="main-menu-item-tablet-button" href="#">法要</button>
+					<button class="main-menu-item-tablet-button" onclick="location.href='memorial-service.html'">法要</button>
 				</div><!-- /.main-menu-item-tablet -->
 				<div class="main-menu-item-tablet">
 					<img class="main-menu-item-tablet-img" src="assets/images/junenji_event_tablet.png">
@@ -207,10 +207,10 @@
 			</address><!-- /.footer-inner-address -->
 			<div class="footer-inner-menu">
 				<ol class="footer-inner-menu-list">
-					<li class="footer-inner-menu-item"><a href="#">トップページ</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a>トップページ</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">法要</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
@@ -229,10 +229,10 @@
 		</div><!-- /.footer-inner -->
 		<div class="footer-inner-tablet">
 			<ol class="footer-inner-menu-list">
-				<li class="footer-inner-menu-item"><a href="#">トップページ</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a>トップページ</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">法要</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
