--- a/memorial-service.html
+++ b/memorial-service.html
@@ -17,7 +17,7 @@
 	<header class="header">
 		<div class="header-inner">
 			<div class="header-inner-left">
-				<a href="#" class="header-inner-left-logo-link"><img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo-img"></a><!-- /.header-inner-left-logo-link -->
+				<a href="index.html" class="header-inner-left-logo-link"><img src="assets/images/junenji_logo_black.png" alt="" class="header-inner-left-logo-img"></a><!-- /.header-inner-left-logo-link -->
 			</div><!-- /.header-inner-left -->
 			<div class="header-inner-right tablet-hidden">
 				<div class="header-inner-right-menu">
@@ -25,7 +25,7 @@
 						<ol class="header-inner-right-menu-normal-list">
 							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺について</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺のご案内</a></li>
-							<li class="header-inner-right-menu-normal-item"><a href="#">法要</a></li>
+							<li class="header-inner-right-menu-normal-item"><a>法要</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">永代供養墓地</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">交通のご案内</a></li>
 						</ol><!-- /.header-inner-right-menu-list -->
@@ -57,10 +57,10 @@
 				</a>
 				<img class="header-inner-right-mb-menu-list-logo" src="assets/images/junenji_logo_white.png">
 				<ol class="header-inner-right-mb-menu-list">
-					<li class="header-inner-right-mb-menu-item"><a href="#">トップページ</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="index.html">トップページ</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺について</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺のご案内</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">法要</a></li>
+					<li class="header-inner-right-mb-menu-item"><a>法要</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">年間行事</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">永代供養墓地</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="#">交通のご案内</a></li>
@@ -92,9 +92,10 @@
 						<img class="main-about-right" src="assets/images/about-right.png">
 					</div><!-- /.main-about-img -->
 					<div class="main-about-contents">
-						<h2 class="main-about-contents-title">浄土宗西山禅林寺派<br><span class="main-about-contents-title-small">具足山</span> 十念寺</h2><!-- /.main-about-contents-title -->
-						<p class="main-about-contents-text">刈谷市指定文化財である御本尊や<br>各施設についてご紹介</p><!-- /.main-about-contents-text -->
-						<button class="main-about-contents-button button-normal2" href="#">十念寺について</button><!-- /.main-about-contents-button -->
+						<h2 class="main-about-contents-title main-about-contents-title-memorial">法要</h2><!-- /.main-about-contents-title -->
+						<p class="main-about-contents-text main-about-contents-text-memorial">故人を偲びながら供養する仏教の儀式です<br>
+							自身の命の尊さに深く思い馳せつつも<br>故人が極楽浄土へ往生するための<br>
+							大切な行事です</p><!-- /.main-about-contents-text -->
 					</div><!-- /.main-about-contents -->
 				</div><!-- /.main-about-tablet -->
 			</div><!-- /.main-contents -->
@@ -108,30 +109,6 @@
 				</div><!-- /.main-video-memorial -->	
 			</div><!-- /.main-contents -->
 		</div><!-- /.main-bg2 -->
-		<div class="main-menu-list-tablet-bg">
-			<div class="main-menu-list-tablet">
-				<div class="main-menu-item-tablet">
-					<img class="main-menu-item-tablet-img" src="assets/images/junenji_front_tablet.png">
-					<p class="main-menu-item-tablet-text">刈谷藩主 土井家、天誅組 総裁 松本奎堂、俳人 中島秋挙など。十念寺にまつわる見どころをご案内。</p>
-					<button class="main-menu-item-tablet-button" href="#">十念寺のご案内</button>
-				</div><!-- /.main-menu-item-tablet -->
-				<div class="main-menu-item-tablet">
-					<img class="main-menu-item-tablet-img" src="assets/images/junenji_chant_tablet.png">
-					<p class="main-menu-item-tablet-text">法要・法事のご要望を承っております。まずはご相談ください</p>
-					<button class="main-menu-item-tablet-button" href="#">法要</button>
-				</div><!-- /.main-menu-item-tablet -->
-				<div class="main-menu-item-tablet">
-					<img class="main-menu-item-tablet-img" src="assets/images/junenji_event_tablet.png">
-					<p class="main-menu-item-tablet-text">十念寺で行われる年間行事です。庚申大祭のご紹介はこちら</p>
-					<button class="main-menu-item-tablet-button" href="#">年間行事</button>
-				</div><!-- /.main-menu-item-tablet -->
-				<div class="main-menu-item-tablet">
-					<img class="main-menu-item-tablet-img" src="assets/images/junenji_grave_tablet.png">
-					<p class="main-menu-item-tablet-text">お墓や永代供養墓地でのご相談を承っております。</p>
-					<button class="main-menu-item-tablet-button" href="#">お墓</button>
-				</div><!-- /.main-menu-item-tablet -->
-			</div><!-- /.main-menu-list-tablet -->
-		</div><!-- /.main-menu-list-tablet-bg -->
 		<div class="main-bg3">
 			<div class="main-contents">
 				<div class="main-accept">
@@ -156,10 +133,10 @@
 			</address><!-- /.footer-inner-address -->
 			<div class="footer-inner-menu">
 				<ol class="footer-inner-menu-list">
-					<li class="footer-inner-menu-item"><a href="#">トップページ</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="index.html">トップページ</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">法要</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a>法要</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
@@ -178,10 +155,10 @@
 		</div><!-- /.footer-inner -->
 		<div class="footer-inner-tablet">
 			<ol class="footer-inner-menu-list">
-				<li class="footer-inner-menu-item"><a href="#">トップページ</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="index.html">トップページ</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">法要</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a>法要</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
