[update]「永代供養墓地」ページレスポンシブ完了(タブレット)

--- a/grave.html
+++ b/grave.html
@@ -79,24 +79,12 @@
 			<div class="main-contents">
 				<div class="main-about main-about-grave">
 					<div class="main-about-contents">
-						<h2 class="main-about-contents-title">お墓について</h2><!-- /.main-about-contents-title -->
+						<h2 class="main-about-contents-title main-about-contents-title-grave">お墓について</h2><!-- /.main-about-contents-title -->
 						<img class="main-about-contents-image" src="assets/images/junenji_grave_about.png">
 						<p class="main-about-contents-text-grave">東海道本線 刈谷駅の南西約２ｋｍ。 最寄り駅は名鉄三河線「刈谷市駅」から徒歩約３分にある墓地です。まずはご相談ください。</p><!-- /.main-about-contents-text -->
 						<button class="main-about-contents-button-grave main-video-memorial-button">お問い合わせはこちら</button>
 					</div><!-- /.main-about-contents -->
 				</div><!-- /.main-about -->
-				<div class="main-about-tablet">
-					<div class="main-about-tablet-img">
-						<img class="main-about-left" src="assets/images/about-left.png">
-						<img class="main-about-right" src="assets/images/about-right.png">
-					</div><!-- /.main-about-img -->
-					<div class="main-about-contents">
-						<h2 class="main-about-contents-title main-about-contents-title-memorial">法要</h2><!-- /.main-about-contents-title -->
-						<p class="main-about-contents-text main-about-contents-text-memorial">故人を偲びながら供養する仏教の儀式です<br>
-							自身の命の尊さに深く思い馳せつつも<br>故人が極楽浄土へ往生するための<br>
-							大切な行事です</p><!-- /.main-about-contents-text -->
-					</div><!-- /.main-about-contents -->
-				</div><!-- /.main-about-tablet -->
 			</div><!-- /.main-contents -->
 		</div><!-- /.main-bg -->
 		<div class="main-bg">
