[update]「交通のご案内」ページレスポンシブ完了(タブレット)

--- a/traffic.html
+++ b/traffic.html
@@ -81,10 +81,18 @@
 					<div class="main-about-contents">
 						<h2 class="main-about-contents-title main-about-contents-title-grave">住所と地図</h2><!-- /.main-about-contents-title -->
 						<iframe class="main-about-traffic-map main-traffic-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1634.4261657822062!2d136.99122306021076!3d34.985363388056115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f6.5!3m3!1m2!1s0x60049cc522e93471%3A0x63cd901e503ac899!2sJunenji!5e0!3m2!1sen!2sjp!4v1674799311471!5m2!1sen!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-						<a class="main-about-traffic-button" href="https://goo.gl/maps/8HQSZy4GYjLENisE7" target="_blank">Googleマップで開く<img src="assets/images/newtab_icon.png"></a>
-						<p class="main-about-traffic-text">具足山　十念寺<br>
-							〒448-0844　愛知県刈谷市広小路4-219<br>
-							TEL：0566-21-0854</p>
+						<div class="main-about-traffic-pc">
+							<a class="main-about-traffic-button" href="https://goo.gl/maps/8HQSZy4GYjLENisE7" target="_blank">Googleマップで開く<img src="assets/images/newtab_icon.png"></a>
+							<p class="main-about-traffic-text">具足山　十念寺<br>
+								〒448-0844　愛知県刈谷市広小路4-219<br>
+								TEL：0566-21-0854</p>
+						</div><!-- /.main-about-traffic-pc -->
+						<div class="main-about-traffic-tablet">
+							<p class="main-about-traffic-text">
+								〒448-0844　愛知県刈谷市広小路4-219<br>
+								TEL：0566-21-0854</p>
+							<a class="main-about-traffic-button" href="https://goo.gl/maps/8HQSZy4GYjLENisE7" target="_blank">Googleマップで開く<img src="assets/images/newtab_icon_tablet.png"></a>
+						</div><!-- /.main-about-traffic-tablet -->
 					</div><!-- /.main-about-contents -->
 				</div><!-- /.main-about -->
 			</div><!-- /.main-contents -->
