[add]「年間行事」ページ完成(PC版)。スライドショーの画像の差し替えはしていない

--- a/memorial-service.html
+++ b/memorial-service.html
@@ -26,6 +26,7 @@
 							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺について</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺のご案内</a></li>
 							<li class="header-inner-right-menu-normal-item"><a>法要</a></li>
+							<li class="header-inner-right-menu-normal-item"><a href="event.html">年間行事</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">永代供養墓地</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="#">交通のご案内</a></li>
 						</ol><!-- /.header-inner-right-menu-list -->
