[update]「年間行事」ページレスポンシブ完了(タブレット)

--- a/event.html
+++ b/event.html
@@ -78,7 +78,7 @@
 		</div><!-- /.main-visual -->
 		<div class="main-bg3">
 			<div class="main-contents">
-				<div class="main-about main-about-grave main-about-traffic">
+				<div class="main-about main-about-grave main-about-event">
 					<div class="main-about-contents">
 						<h2 class="main-about-contents-title main-about-contents-title-grave">年間行事</h2><!-- /.main-about-contents-title -->
 						<div class="main-about-event-list">
@@ -131,6 +131,7 @@
 			<div class="main-contents">
 				<div class="main-event-slider">
 					<h2 class="main-event-slider-title">庚申さんと蒟蒻(こんにゃく)について</h2><!-- /.main-event-slider-title -->
+					<h2 class="main-event-slider-title main-event-slider-title-tablet">庚申さんと蒟蒻について</h2><!-- /.main-event-slider-title -->
 					<div class="main-event-slider-for">
 						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/1.png"></div><!-- /.main-event-slider-for-item -->
 						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
@@ -151,6 +152,16 @@
 						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
 						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
 					</div><!-- /.main-event-slider-nav -->
+					<div class="main-event-slider-tablet">
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/1.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/2.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/3.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/4.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/5.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/6.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/7.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/8.png"></div><!-- /.main-event-slider-for-item -->
+					</div><!-- /.main-event-slider-tablet -->
 					<p class="main-event-slider-text">人の体に「三尸」という虫がいて、庚申の日の夜に人が寝静まると、体から抜け出し、その人が行なってきた善悪の全てのことを天帝釈 (帝釈天)に告げにいきます。 すると、天帝釈は天の邪鬼に命じ、その人を病気にさせたり、寿命を決めたりすると云われています。その為、人々はその三尸が抜け出ないよう、寝ずに夜通し過ごしたり、天の邪鬼が嫌いな「身代わり猿」を家の中に吊したり、三尸の虫の嫌いな蒟蒻を食べ、三尸の虫を弱らせて体から抜け出ないようにしてきました。<br><br>
 						大阪・四天王寺、京都・八坂、奈良・奈良町の庚申さんが本邦最初と云われています。何れもコンニャクを食べる習慣があり、北へ向き、お喋りせずに食べると 効果があるといわれます。恵方巻きはこの庚申さんが発祥かもしれません。縁日は60日毎にやってくる 「庚申の日」です。日本では上記の庚申さんの他、寅さんで有名な柴又帝釈天も同じ縁日に行事が行われています。<br><br>
 						合掌
